feat: Add eqpropbackbone & corresponding configs

--- a/notebooks/eqprop/eqprop-modules.ipynb
+++ b/notebooks/eqprop/eqprop-modules.ipynb
@@ -69,6 +69,32 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from src._eqprop.wrapper import EqPropBackbone\n",
+    "\n",
+    "model = EqPropBackbone(cfg=[input_size * 2, hidden_size, output_size * 2])\n",
+    "optimizer = torch.optim.SGD(model.parameters(), lr=0.1)\n",
+    "logit = model(x)\n",
+    "y_hat = F.softmax(logit, dim=1)\n",
+    "loss = F.mse_loss(y_hat, y)\n",
+    "optimizer.zero_grad()\n",
+    "loss.backward()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x.grad"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -208,6 +234,13 @@
    "source": [
     "torch.allclose(model1.bias.grad, b_grad, atol=1e-6)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
