feat: Compare two prog schemes in AnalogTile & Add weight modifier

--- a/src/prog-scheme/prog-scheme.ipynb
+++ b/src/prog-scheme/prog-scheme.ipynb
@@ -4,13 +4,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Custom Tiles"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## Primitive update method"
    ]
   },
@@ -21,12 +14,16 @@
    "outputs": [],
    "source": [
     "import torch\n",
+    "from aihwkit.exceptions import TorchTileConfigError\n",
+    "from aihwkit.simulator.configs import TorchInferenceRPUConfig\n",
+    "from aihwkit.simulator.parameters.enums import WeightClipType\n",
+    "from aihwkit.simulator.parameters.inference import WeightClipParameter, WeightModifierParameter\n",
     "from aihwkit.simulator.tiles.custom import CustomSimulatorTile\n",
     "from torch import Tensor\n",
     "\n",
     "# TODO: 아래 메서드들 구현 필요\n",
     "# aihwkit의 PulseType(aihwkit.simulator.parameters.enums.PulseType)들과 연동해서 구현.\n",
-    "# PCM inference noise 모델도 추가해보기\n",
+    "# PCM inference noise 모델 등등 추가해보기\n",
     "\n",
     "# Note: SimulaterTile.forward() 말고 AnalogNVM의 matmul에다가 구현해도 됨\n",
     "# AnalogMVM.matmul()\n",
@@ -41,18 +38,19 @@
     "class _HalfSelectMixin:\n",
     "    \"\"\"Implements the half-selected update method.\"\"\"\n",
     "\n",
-    "    def half_selection(self): ...\n",
+    "    def half_selection(self):\n",
+    "        pass\n",
     "\n",
     "\n",
     "class HalfSelectedSimulatorTile(_HalfSelectMixin, CustomSimulatorTile):\n",
     "\n",
-    "    def set_weights(self, weight: Tensor) -> None:\n",
+    "    def set_weights(self, weight: Tensor, **kwargs) -> None:\n",
     "        \"\"\"Set the tile weights.\n",
     "\n",
     "        Args:\n",
     "            weight: ``[out_size, in_size]`` weight matrix.\n",
     "        \"\"\"\n",
-    "        raise NotImplementedError(\"set_weights() is not implemented\")\n",
+    "        super().set_weights(weight, **kwargs)\n",
     "\n",
     "    def get_weights(self) -> Tensor:\n",
     "        \"\"\"Get the tile weights.\n",
@@ -62,7 +60,7 @@
     "            matrix; and the second item is either the ``[out_size]`` bias vector\n",
     "            or ``None`` if the tile is set not to use bias.\n",
     "        \"\"\"\n",
-    "        raise NotImplementedError(\"get_weights() is not implemented\")\n",
+    "        super().get_weights()\n",
     "\n",
     "    def update(\n",
     "        self,\n",
@@ -94,14 +92,59 @@
     "        is_test: bool = False,\n",
     "        non_blocking: bool = False,\n",
     "    ) -> Tensor:\n",
-    "        return super().forward(x_input, bias, in_trans, out_trans, is_test, non_blocking)"
+    "        if not is_test:\n",
+    "            noisy_weights = HalfSelectedSimulatorTile.modify_weight(\n",
+    "                self.weight, self._modifier, x_input.shape[0]\n",
+    "            )\n",
+    "        else:\n",
+    "            noisy_weights = self.weight\n",
+    "\n",
+    "        ...\n",
+    "\n",
+    "    @staticmethod\n",
+    "    def modify_weight(inp_weight: Tensor, modifier: WeightModifierParameter, batch_size: int):\n",
+    "        pass\n",
+    "\n",
+    "    def set_config(self, rpu_config: \"TorchInferenceRPUConfig\") -> None:\n",
+    "        \"\"\"Updated the configuration to allow on-the-fly changes.\n",
+    "\n",
+    "        Args:\n",
+    "            rpu_config: configuration to use in the next forward passes.\n",
+    "        \"\"\"\n",
+    "        self._f_io = rpu_config.forward\n",
+    "        self._modifier = rpu_config.modifier\n",
+    "\n",
+    "    @torch.no_grad()\n",
+    "    def clip_weights(self, clip: WeightClipParameter) -> None:\n",
+    "        \"\"\"Clip the weights. Called by InferenceTileWithperiphery.post_update_step()\n",
+    "\n",
+    "        Args:\n",
+    "            clip: parameters specifying the clipping methof and type.\n",
+    "\n",
+    "        Raises:\n",
+    "            NotImplementedError: For unsupported WeightClipTypes\n",
+    "            ConfigError: If unknown WeightClipType used.\n",
+    "        \"\"\"\n",
+    "\n",
+    "        if clip.type == WeightClipType.FIXED_VALUE:\n",
+    "            self.weight.data = torch.clamp(self.weight, -clip.fixed_value, clip.fixed_value)\n",
+    "        elif clip.type == WeightClipType.LAYER_GAUSSIAN:\n",
+    "            alpha = self.weight.std() * clip.sigma\n",
+    "            if clip.fixed_value > 0:\n",
+    "                alpha = min(clip.fixed_value, alpha)\n",
+    "            self.weight.data = torch.clamp(self.weight, -alpha, alpha)\n",
+    "\n",
+    "        elif clip.type == WeightClipType.AVERAGE_CHANNEL_MAX:\n",
+    "            raise NotImplementedError\n",
+    "        else:\n",
+    "            raise TorchTileConfigError(f\"Unknown clip type {clip.type}\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## CustomTile & RPUConfig"
+    "## CustomTile"
    ]
   },
   {
@@ -110,13 +153,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from dataclasses import dataclass\n",
-    "from typing import Any, Callable, Optional, Type\n",
+    "from typing import Any, Callable, Optional, Tuple, Type\n",
     "\n",
-    "from aihwkit.simulator.tiles.custom import CustomRPUConfig, CustomTile\n",
+    "from aihwkit.exceptions import AnalogBiasConfigError, TileError\n",
+    "from aihwkit.simulator.tiles.base import SimulatorTile, SimulatorTileWrapper\n",
+    "from aihwkit.simulator.tiles.custom import CustomRPUConfig\n",
+    "from aihwkit.simulator.tiles.functions import AnalogFunction\n",
+    "from aihwkit.simulator.tiles.inference import InferenceTileWithPeriphery\n",
+    "from aihwkit.simulator.tiles.module import TileModule\n",
     "\n",
     "\n",
-    "class MyCustomTile(CustomTile):\n",
+    "class RealisticTile(TileModule, InferenceTileWithPeriphery, SimulatorTileWrapper):\n",
+    "    \"\"\"_summary_\n",
+    "\n",
+    "    Note) methods in below are from CustomTile\n",
+    "    \"\"\"\n",
     "\n",
     "    def __init__(\n",
     "        self,\n",
@@ -127,12 +178,84 @@
     "        in_trans: bool = False,\n",
     "        out_trans: bool = False,\n",
     "    ):\n",
-    "        super().__init__(out_size, in_size, rpu_config, bias, in_trans, out_trans)\n",
+    "        if in_trans or out_trans:\n",
+    "            raise TileError(\"in/out trans is not supported.\")\n",
+    "\n",
+    "        if not rpu_config:\n",
+    "            rpu_config = CustomRPUConfig()\n",
+    "\n",
+    "        TileModule.__init__(self)\n",
+    "        SimulatorTileWrapper.__init__(\n",
+    "            self,\n",
+    "            out_size,\n",
+    "            in_size,\n",
+    "            rpu_config,  # type: ignore\n",
+    "            bias,\n",
+    "            in_trans,\n",
+    "            out_trans,\n",
+    "            torch_update=True,\n",
+    "        )\n",
+    "        InferenceTileWithPeriphery.__init__(self)\n",
+    "\n",
+    "        if self.analog_bias:\n",
+    "            raise AnalogBiasConfigError(\"Analog bias is not supported for the torch tile\")\n",
     "        # dynamically add the program_weights method\n",
-    "        self.program_weights = rpu_config.program_weights.__get__(self, MyCustomTile)\n",
+    "        self.program_weights = rpu_config.program_weights.__get__(self, RealisticTile)\n",
     "\n",
+    "    def _create_simulator_tile(  # type: ignore\n",
+    "        self, x_size: int, d_size: int, rpu_config: \"CustomRPUConfig\"\n",
+    "    ) -> \"SimulatorTile\":\n",
+    "        \"\"\"Create a simulator tile.\n",
     "\n",
+    "        Args:\n",
+    "            weight: 2D weight\n",
+    "            rpu_config: resistive processing unit configuration\n",
+    "\n",
+    "        Returns:\n",
+    "            a simulator tile based on the specified configuration.\n",
+    "        \"\"\"\n",
+    "        return rpu_config.simulator_tile_class(x_size=x_size, d_size=d_size, rpu_config=rpu_config)\n",
+    "\n",
+    "    def forward(\n",
+    "        self, x_input: Tensor, tensor_view: Optional[Tuple] = None  # type: ignore\n",
+    "    ) -> Tensor:\n",
+    "        \"\"\"Torch forward function that calls the analog context forward\"\"\"\n",
+    "        # pylint: disable=arguments-differ\n",
+    "\n",
+    "        # to enable on-the-fly changes. However, with caution: might\n",
+    "        # change rpu config for backward / update while doing another forward.\n",
+    "        self.tile.set_config(self.rpu_config)\n",
+    "\n",
+    "        out = AnalogFunction.apply(\n",
+    "            self.get_analog_ctx(), self, x_input, self.shared_weights, not self.training\n",
+    "        )\n",
+    "\n",
+    "        if tensor_view is None:\n",
+    "            tensor_view = self.get_tensor_view(out.dim())\n",
+    "        out = self.apply_out_scaling(out, tensor_view)\n",
+    "\n",
+    "        if self.digital_bias:\n",
+    "            return out + self.bias.view(*tensor_view)\n",
+    "        return out"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## RPUConfig"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# TODO: dataclass에 직접 program_weights 메서드 붙여넣기?\n",
+    "from dataclasses import dataclass, field\n",
+    "\n",
+    "\n",
     "@dataclass\n",
     "class RPUConfigwithProgram(CustomRPUConfig):\n",
     "    \"\"\"Custom single RPU configuration.\"\"\"\n",
@@ -140,11 +263,18 @@
     "    program_weights: Callable[[Any], None] = None\n",
     "    \"\"\"Method to program the weights.\"\"\"\n",
     "\n",
-    "    tile_class: Type = MyCustomTile\n",
+    "    tile_class: Type = RealisticTile\n",
     "    \"\"\"Tile class that corresponds to this RPUConfig.\"\"\"\n",
     "\n",
     "    simulator_tile_class: Type = HalfSelectedSimulatorTile\n",
-    "    \"\"\"Simulator tile class implementing the analog forward / backward / update.\"\"\""
+    "    \"\"\"Simulator tile class implementing the analog forward / backward / update.\"\"\"\n",
+    "\n",
+    "    clip: WeightClipParameter = field(\n",
+    "        default_factory=lambda: WeightClipParameter(\n",
+    "            type=WeightClipType.FIXED_VALUE, fixed_value=1.0\n",
+    "        )\n",
+    "    )\n",
+    "    modifier: WeightModifierParameter = field(default_factory=WeightModifierParameter)"
    ]
   },
   {
@@ -183,7 +313,7 @@
     "    self,\n",
     "    from_reference: bool = True,\n",
     "    x_values: Optional[Tensor] = None,\n",
-    "    learning_rate: float = 0.1,\n",
+    "    learning_rate: float = 1,\n",
     "    max_iter: int = 100,\n",
     "    tolerance: Optional[float] = 0.01,\n",
     "    w_init: Union[float, Tensor] = 0.01,\n",
@@ -236,12 +366,25 @@
     "        # TODO: error와 weight 2norm 사이 관계 분석\n",
     "        error = y - target_values\n",
     "        err_normalized = error.abs().mean().item() / target_max\n",
-    "        log.debug(f\"Error: {err_normalized}\")\n",
+    "        mtx_diff = self.tile.get_weights() - target_weights\n",
+    "        l2_norm = mtx_diff.norm()\n",
+    "        log.debug(f\"Error: {l2_norm}\")\n",
+    "        # log.debug(f\"Error: {err_normalized}\")\n",
     "        if tolerance is not None and err_normalized < tolerance:\n",
     "            break\n",
     "        self.tile.update(x_values, error, False)  # type: ignore\n",
     "\n",
     "    self.tile.set_learning_rate(lr_save)  # type: ignore"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "W = torch.rand(4, 3)\n",
+    "U, S, Vh = torch.linalg.svd(W, full_matrices=False)"
    ]
   },
   {
@@ -266,7 +409,7 @@
     "    Returns:\n",
     "        Compensated vector.\n",
     "    \"\"\"\n",
-    "    pass\n",
+    "    return v\n",
     "\n",
     "\n",
     "@torch.no_grad()\n",
@@ -307,28 +450,45 @@
     "        self.tile.set_weights_uniform_random(-w_init, w_init)  # type: ignore\n",
     "\n",
     "    lr_save = self.tile.get_learning_rate()  # type: ignore\n",
+    "    x_values = torch.eye(self.tile.get_x_size())\n",
+    "    x_values = x_values.to(self.device)\n",
+    "    target_values = x_values @ target_weights.to(self.device).T\n",
+    "    target_max = target_values.abs().max().item()\n",
     "    self.tile.set_learning_rate(1)  # type: ignore\n",
-    "    U, S, Vh = torch.linalg.svd(target_weights - self.tile.get_weights())\n",
+    "    # since tile.update() updates w -= lr*delta_w so flip the sign\n",
+    "    diff = self.tile.get_weights() - target_weights\n",
+    "    # normalize diff matrix\n",
+    "    U, S, Vh = torch.linalg.svd(diff, full_matrices=False)\n",
+    "    n = torch.linalg.matrix_rank(diff)\n",
     "    # compute numerical rank from S given rtol, atol\n",
-    "    num_rank = torch.sum(S > torch.max(rank_atol, S * rank_rtol))\n",
-    "    assert num_rank == torch.linalg.matrix_rank(\n",
-    "        target_weights - self.tile.get_weights(), rank_atol, rank_rtol\n",
-    "    )\n",
+    "    # num_rank = torch.sum(S > torch.max(rank_atol, S * rank_rtol))\n",
+    "    # assert num_rank == torch.linalg.matrix_rank(\n",
+    "    #     target_weights - self.tile.get_weights(), rank_atol, rank_rtol\n",
+    "    # )\n",
     "    i = 0\n",
-    "    for _ in range(min(num_rank, max_iter)):\n",
+    "    for _ in range(3 * n):\n",
     "        u1 = U[i] * torch.sqrt(S[i])\n",
     "        v1 = Vh[i] * torch.sqrt(S[i])\n",
     "        u1, v1 = compensate_half_selection(u1), compensate_half_selection(v1)\n",
-    "        self.tile.update(u1, v1, False)\n",
-    "        diff = target_weights - self.get_weights(realistic=True)\n",
+    "        self.tile.update(v1, u1, False)\n",
+    "\n",
+    "        # TODO: self.get_weights()\n",
+    "        diff = self.tile.get_weights() - target_weights\n",
     "        l2_norm = diff.norm()\n",
+    "        print(l2_norm)\n",
+    "        # TODO: match error metric to that of gpc\n",
     "        log.debug(f\"Error: {l2_norm}\")\n",
+    "        # y = self.tile.forward(x_values, False)\n",
+    "        # # TODO: error와 weight 2norm 사이 관계 분석\n",
+    "        # error = y - target_values\n",
+    "        # err_normalized = error.abs().mean().item() / target_max\n",
+    "        # log.debug(f\"Error: {err_normalized}\")\n",
     "        if tolerance is not None and l2_norm < tolerance:\n",
     "            break\n",
     "        elif svd_once:\n",
     "            i += 1\n",
     "        else:\n",
-    "            U, S, Vh = torch.linalg.svd(diff)\n",
+    "            U, S, Vh = torch.linalg.svd(diff, full_matrices=False)\n",
     "\n",
     "    self.tile.set_learning_rate(lr_save)  # type: ignore"
    ]
@@ -355,15 +515,27 @@
    "source": [
     "from aihwkit.simulator.configs import SingleRPUConfig\n",
     "from aihwkit.simulator.configs.devices import ConstantStepDevice, DriftParameter\n",
-    "from aihwkit.simulator.configs.utils import InputRangeParameter, PrePostProcessingParameter\n",
+    "from aihwkit.simulator.configs.utils import (\n",
+    "    InputRangeParameter,\n",
+    "    PrePostProcessingParameter,\n",
+    "    UpdateParameters,\n",
+    ")\n",
+    "from aihwkit.simulator.parameters.enums import PulseType\n",
     "from aihwkit.simulator.tiles.analog import AnalogTile\n",
     "\n",
     "input_size = 6\n",
-    "output_size = 3\n",
-    "pre_post = PrePostProcessingParameter(input_range=InputRangeParameter(enable=True))\n",
+    "output_size = 4\n",
+    "# pre_post = PrePostProcessingParameter(input_range=InputRangeParameter(enable=True))\n",
     "device = ConstantStepDevice(diffusion=0, drift=DriftParameter())\n",
-    "rpuconfig = SingleRPUConfig(device=device, pre_post=pre_post)\n",
+    "update_cfg = UpdateParameters(pulse_type=PulseType.NONE)\n",
+    "# rpuconfig = SingleRPUConfig(device=device, pre_post=pre_post)\n",
+    "# rpuconfig = SingleRPUConfig(update=update_cfg)\n",
+    "rpuconfig = SingleRPUConfig()\n",
     "atile = AnalogTile(output_size, input_size, rpu_config=rpuconfig)  # with periphery\n",
+    "atile_dic = {}\n",
+    "atile.state_dict(atile_dic)\n",
+    "atile2 = AnalogTile(output_size, input_size, rpu_config=rpuconfig)\n",
+    "atile2.load_state_dict(atile_dic, assign=True)\n",
     "print(rpuconfig)"
    ]
   },
@@ -373,7 +545,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "atile.program_weights = program_weights_gpc.__get__(atile, AnalogTile)"
+    "from aihwkit.simulator.tiles.periphery import TileWithPeriphery\n",
+    "\n",
+    "atile.program_weights = program_weights_gpc.__get__(atile, TileWithPeriphery)\n",
+    "atile2.program_weights = program_weights_svd.__get__(atile2, TileWithPeriphery)"
    ]
   },
   {
@@ -399,15 +574,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import torch\n",
-    "\n",
-    "from src.utils.logging_utils import LogCapture\n",
-    "\n",
-    "w = torch.rand_like(atile.get_weights()[0])\n",
-    "\n",
     "with LogCapture() as logc:\n",
-    "    atile.set_weights(weight=w, realistic=True)\n",
-    "    log_list = logc.get_log_list()"
+    "    atile2.set_weights(weight=w, realistic=True)\n",
+    "    log_list2 = logc.get_log_list()"
    ]
   },
   {
@@ -440,11 +609,34 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "err_list = extract_error(log_list)\n",
+    "err_list2 = extract_error(log_list2)\n",
     "plt.plot(err_list)\n",
+    "plt.plot(err_list2)\n",
+    "# set legend\n",
+    "plt.legend([\"gpc\", \"svd\"])\n",
     "plt.xlabel(\"Iteration\")\n",
     "plt.ylabel(\"Error\")\n",
     "plt.title(\"Error vs Iteration\")\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### CustomTile"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from aihwkit.simulator.tiles.custom import CustomTile\n",
+    "\n",
+    "ctile = CustomTile(output_size, input_size)\n",
+    "ctile.get_weights(realistic=True)"
    ]
   },
   {
@@ -461,10 +653,10 @@
    "outputs": [],
    "source": [
     "rpu_config = RPUConfigwithProgram(program_weights=program_weights_gpc)\n",
-    "ctile = MyCustomTile(output_size, input_size, rpu_config=rpu_config)\n",
+    "ctile = RealisticTile(output_size, input_size, rpu_config=rpu_config)\n",
     "\n",
     "rpu_config2 = RPUConfigwithProgram(program_weights=program_weights_svd)\n",
-    "ctile2 = MyCustomTile(output_size, input_size, rpu_config=rpu_config2)"
+    "ctile2 = RealisticTile(output_size, input_size, rpu_config=rpu_config2)"
    ]
   },
   {
@@ -483,11 +675,11 @@
    "outputs": [],
    "source": [
     "with LogCapture() as logc:\n",
-    "    ctile.set_weights(realistic=True)\n",
+    "    ctile.set_weights(w, realistic=True)\n",
     "    log_list = logc.get_log_list()\n",
     "\n",
     "with LogCapture() as logc:\n",
-    "    ctile2.set_weights()\n",
+    "    ctile2.set_weights(w, realistic=True)\n",
     "    log_list2 = logc.get_log_list()"
    ]
   },
