fix: SVD impements

--- a/src/prog-scheme/prog-scheme.ipynb
+++ b/src/prog-scheme/prog-scheme.ipynb
@@ -378,16 +378,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "W = torch.rand(4, 3)\n",
-    "U, S, Vh = torch.linalg.svd(W, full_matrices=False)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -419,7 +409,7 @@
     "    max_iter: int = 100,\n",
     "    tolerance: Optional[float] = 0.01,\n",
     "    w_init: Union[float, Tensor] = 0.01,\n",
-    "    rank_atol: float = 1e-6,\n",
+    "    rank_atol: Optional[float] = 1e-6,\n",
     "    rank_rtol: float = 1e-6,\n",
     "    svd_once: bool = False,\n",
     "    **kwargs: Any,\n",
@@ -459,17 +449,16 @@
     "    diff = self.tile.get_weights() - target_weights\n",
     "    # normalize diff matrix\n",
     "    U, S, Vh = torch.linalg.svd(diff, full_matrices=False)\n",
-    "    n = torch.linalg.matrix_rank(diff)\n",
-    "    # compute numerical rank from S given rtol, atol\n",
-    "    # num_rank = torch.sum(S > torch.max(rank_atol, S * rank_rtol))\n",
-    "    # assert num_rank == torch.linalg.matrix_rank(\n",
-    "    #     target_weights - self.tile.get_weights(), rank_atol, rank_rtol\n",
-    "    # )\n",
+    "    rank = torch.linalg.matrix_rank(diff)\n",
+    "    # if rank_atol is None:\n",
+    "    #     rank_atol = S.max() * max(diff.shape) * torch.finfo(S.dtype).eps\n",
+    "\n",
+    "    # rank = torch.sum(S > rank_atol).item()\n",
     "    i = 0\n",
-    "    for _ in range(3 * n):\n",
-    "        u1 = U[i] * torch.sqrt(S[i])\n",
-    "        v1 = Vh[i] * torch.sqrt(S[i])\n",
-    "        u1, v1 = compensate_half_selection(u1), compensate_half_selection(v1)\n",
+    "    for _ in range(min(max_iter, rank)):\n",
+    "        u = U[:, i] * torch.sqrt(S[i])  # 열 벡터로 가져옵니다\n",
+    "        v = Vh[i, :] * torch.sqrt(S[i])  # 행 벡터로 가져옵니다 (이미 전치된 상태)\n",
+    "        u1, v1 = compensate_half_selection(u), compensate_half_selection(v)\n",
     "        self.tile.update(v1, u1, False)\n",
     "\n",
     "        # TODO: self.get_weights()\n",
@@ -504,7 +493,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### AnalogTile()"
+    "### AnalogTile"
    ]
   },
   {
@@ -514,7 +503,7 @@
    "outputs": [],
    "source": [
     "from aihwkit.simulator.configs import SingleRPUConfig\n",
-    "from aihwkit.simulator.configs.devices import ConstantStepDevice, DriftParameter\n",
+    "from aihwkit.simulator.configs.devices import ConstantStepDevice, DriftParameter, IdealDevice\n",
     "from aihwkit.simulator.configs.utils import (\n",
     "    InputRangeParameter,\n",
     "    PrePostProcessingParameter,\n",
@@ -523,14 +512,15 @@
     "from aihwkit.simulator.parameters.enums import PulseType\n",
     "from aihwkit.simulator.tiles.analog import AnalogTile\n",
     "\n",
-    "input_size = 6\n",
-    "output_size = 4\n",
+    "input_size = 600\n",
+    "output_size = 400\n",
     "# pre_post = PrePostProcessingParameter(input_range=InputRangeParameter(enable=True))\n",
-    "device = ConstantStepDevice(diffusion=0, drift=DriftParameter())\n",
+    "device_cfg = ConstantStepDevice(diffusion=0, drift=DriftParameter())\n",
+    "# device_cfg = IdealDevice()\n",
     "update_cfg = UpdateParameters(pulse_type=PulseType.NONE)\n",
     "# rpuconfig = SingleRPUConfig(device=device, pre_post=pre_post)\n",
-    "# rpuconfig = SingleRPUConfig(update=update_cfg)\n",
-    "rpuconfig = SingleRPUConfig()\n",
+    "rpuconfig = SingleRPUConfig(update=update_cfg, device=device_cfg)\n",
+    "# rpuconfig = SingleRPUConfig()\n",
     "atile = AnalogTile(output_size, input_size, rpu_config=rpuconfig)  # with periphery\n",
     "atile_dic = {}\n",
     "atile.state_dict(atile_dic)\n",
@@ -643,7 +633,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### GPC vs SVD"
+    "### RealisticTile(Ours)"
    ]
   },
   {
