--- a/src/prog-scheme/prog-scheme.ipynb
+++ b/src/prog-scheme/prog-scheme.ipynb
@@ -288,7 +288,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Gradient-based programming"
+    "### Gradient descent-based programming"
    ]
   },
   {
@@ -309,7 +309,7 @@
     "\n",
     "\n",
     "@torch.no_grad()\n",
-    "def program_weights_gpc(\n",
+    "def program_weights_gdp(\n",
     "    self,\n",
     "    from_reference: bool = True,\n",
     "    x_values: Optional[Tensor] = None,\n",
@@ -349,6 +349,7 @@
     "\n",
     "    if x_values is None:\n",
     "        x_values = torch.eye(self.tile.get_x_size())\n",
+    "        # x_values = torch.rand(self.tile.get_x_size(), self.tile.get_x_size())\n",
     "        x_values = x_values.to(self.device)\n",
     "        target_values = x_values @ target_weights.to(self.device).T\n",
     "\n",
@@ -367,7 +368,7 @@
     "        error = y - target_values\n",
     "        err_normalized = error.abs().mean().item() / target_max\n",
     "        mtx_diff = self.tile.get_weights() - target_weights\n",
-    "        l2_norm = mtx_diff.norm()\n",
+    "        l2_norm = torch.linalg.matrix_norm(mtx_diff, ord=2)\n",
     "        log.debug(f\"Error: {l2_norm}\")\n",
     "        # log.debug(f\"Error: {err_normalized}\")\n",
     "        if tolerance is not None and err_normalized < tolerance:\n",
@@ -408,9 +409,8 @@
     "    from_reference: bool = True,\n",
     "    max_iter: int = 100,\n",
     "    tolerance: Optional[float] = 0.01,\n",
-    "    w_init: Union[float, Tensor] = 0.01,\n",
-    "    rank_atol: Optional[float] = 1e-6,\n",
-    "    rank_rtol: float = 1e-6,\n",
+    "    w_init: Union[float, Tensor] = 0.0,\n",
+    "    rank_atol: Optional[float] = 1e-2,\n",
     "    svd_once: bool = False,\n",
     "    **kwargs: Any,\n",
     ") -> None:\n",
@@ -440,32 +440,37 @@
     "        self.tile.set_weights_uniform_random(-w_init, w_init)  # type: ignore\n",
     "\n",
     "    lr_save = self.tile.get_learning_rate()  # type: ignore\n",
-    "    x_values = torch.eye(self.tile.get_x_size())\n",
-    "    x_values = x_values.to(self.device)\n",
-    "    target_values = x_values @ target_weights.to(self.device).T\n",
-    "    target_max = target_values.abs().max().item()\n",
+    "    # x_values = torch.eye(self.tile.get_x_size())\n",
+    "    # x_values = x_values.to(self.device)\n",
+    "    # target_values = x_values @ target_weights.to(self.device).T\n",
+    "    # target_max = target_values.abs().max().item()\n",
     "    self.tile.set_learning_rate(1)  # type: ignore\n",
     "    # since tile.update() updates w -= lr*delta_w so flip the sign\n",
     "    diff = self.tile.get_weights() - target_weights\n",
     "    # normalize diff matrix\n",
     "    U, S, Vh = torch.linalg.svd(diff, full_matrices=False)\n",
-    "    rank = torch.linalg.matrix_rank(diff)\n",
-    "    # if rank_atol is None:\n",
-    "    #     rank_atol = S.max() * max(diff.shape) * torch.finfo(S.dtype).eps\n",
+    "    # rank = torch.linalg.matrix_rank(diff)\n",
+    "    if rank_atol is None:\n",
+    "        rank_atol = S.max() * max(diff.shape) * torch.finfo(S.dtype).eps\n",
     "\n",
-    "    # rank = torch.sum(S > rank_atol).item()\n",
+    "    rank = torch.sum(S > rank_atol).item()\n",
     "    i = 0\n",
     "    for _ in range(min(max_iter, rank)):\n",
-    "        u = U[:, i] * torch.sqrt(S[i])  # 열 벡터로 가져옵니다\n",
-    "        v = Vh[i, :] * torch.sqrt(S[i])  # 행 벡터로 가져옵니다 (이미 전치된 상태)\n",
+    "        u = U[:, i]\n",
+    "        v = Vh[i, :]\n",
+    "        # uv_ratio = torch.sqrt(u/v)\n",
+    "        uv_ratio = 1\n",
+    "        sqrt_s = torch.sqrt(S[i])\n",
+    "        v *= uv_ratio * sqrt_s\n",
+    "        u *= sqrt_s / uv_ratio\n",
     "        u1, v1 = compensate_half_selection(u), compensate_half_selection(v)\n",
     "        self.tile.update(v1, u1, False)\n",
     "\n",
     "        # TODO: self.get_weights()\n",
     "        diff = self.tile.get_weights() - target_weights\n",
-    "        l2_norm = diff.norm()\n",
-    "        print(l2_norm)\n",
-    "        # TODO: match error metric to that of gpc\n",
+    "        U, S, Vh = torch.linalg.svd(diff, full_matrices=False)\n",
+    "        # l2_norm = torch.linalg.matrix_norm(diff, ord=2)\n",
+    "        l2_norm = S[i]  # equivalent to above\n",
     "        log.debug(f\"Error: {l2_norm}\")\n",
     "        # y = self.tile.forward(x_values, False)\n",
     "        # # TODO: error와 weight 2norm 사이 관계 분석\n",
@@ -477,7 +482,7 @@
     "        elif svd_once:\n",
     "            i += 1\n",
     "        else:\n",
-    "            U, S, Vh = torch.linalg.svd(diff, full_matrices=False)\n",
+    "            pass\n",
     "\n",
     "    self.tile.set_learning_rate(lr_save)  # type: ignore"
    ]
@@ -487,6 +492,53 @@
    "metadata": {},
    "source": [
     "## Experimental Results"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Util & setup"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# form log list[string], search Error: {err_normalized} pattern and extract the value\n",
+    "# into list\n",
+    "import re\n",
+    "\n",
+    "from src.utils.logging_utils import LogCapture\n",
+    "\n",
+    "\n",
+    "def extract_error(log_list):\n",
+    "    err_list = []\n",
+    "\n",
+    "    for log in log_list:\n",
+    "        if \"Error\" in log:\n",
+    "            err_list.append(float(re.findall(r\"Error: ([0-9.e-]+)\", log)[0]))\n",
+    "\n",
+    "    return err_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch\n",
+    "\n",
+    "input_size = 1000\n",
+    "output_size = 500\n",
+    "\n",
+    "# generate low rank matrix\n",
+    "k = 10\n",
+    "u, s, v = torch.svd(torch.randn(input_size, output_size))\n",
+    "w = torch.mm(u[:, :k], torch.mm(torch.diag(s[:k]), v[:, :k].t()))"
    ]
   },
   {
@@ -512,14 +564,11 @@
     "from aihwkit.simulator.parameters.enums import PulseType\n",
     "from aihwkit.simulator.tiles.analog import AnalogTile\n",
     "\n",
-    "input_size = 600\n",
-    "output_size = 400\n",
-    "# pre_post = PrePostProcessingParameter(input_range=InputRangeParameter(enable=True))\n",
-    "device_cfg = ConstantStepDevice(diffusion=0, drift=DriftParameter())\n",
-    "# device_cfg = IdealDevice()\n",
-    "update_cfg = UpdateParameters(pulse_type=PulseType.NONE)\n",
-    "# rpuconfig = SingleRPUConfig(device=device, pre_post=pre_post)\n",
-    "rpuconfig = SingleRPUConfig(update=update_cfg, device=device_cfg)\n",
+    "pre_post_cfg = PrePostProcessingParameter(input_range=InputRangeParameter(enable=True))\n",
+    "# device_cfg = ConstantStepDevice(diffusion=0)\n",
+    "device_cfg = IdealDevice()\n",
+    "update_cfg = UpdateParameters(pulse_type=PulseType.STOCHASTIC_COMPRESSED)\n",
+    "rpuconfig = SingleRPUConfig(update=update_cfg, device=device_cfg, pre_post=pre_post_cfg)\n",
     "# rpuconfig = SingleRPUConfig()\n",
     "atile = AnalogTile(output_size, input_size, rpu_config=rpuconfig)  # with periphery\n",
     "atile_dic = {}\n",
@@ -537,7 +586,7 @@
    "source": [
     "from aihwkit.simulator.tiles.periphery import TileWithPeriphery\n",
     "\n",
-    "atile.program_weights = program_weights_gpc.__get__(atile, TileWithPeriphery)\n",
+    "atile.program_weights = program_weights_gdp.__get__(atile, TileWithPeriphery)\n",
     "atile2.program_weights = program_weights_svd.__get__(atile2, TileWithPeriphery)"
    ]
   },
@@ -547,12 +596,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import torch\n",
-    "\n",
-    "from src.utils.logging_utils import LogCapture\n",
-    "\n",
-    "w = torch.rand_like(atile.get_weights()[0])\n",
-    "\n",
     "with LogCapture() as logc:\n",
     "    atile.set_weights(weight=w, realistic=True)\n",
     "    log_list = logc.get_log_list()"
@@ -575,37 +618,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# form log list[string], search Error: {err_normalized} pattern and extract the value\n",
-    "# into list\n",
-    "import re\n",
-    "\n",
-    "\n",
-    "def extract_error(log_list):\n",
-    "    err_list = []\n",
-    "\n",
-    "    for log in log_list:\n",
-    "        if \"Error\" in log:\n",
-    "            err_list.append(float(re.findall(r\"Error: ([0-9.]+)\", log)[0]))\n",
-    "\n",
-    "    return err_list"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "import matplotlib.pyplot as plt\n",
     "\n",
     "err_list = extract_error(log_list)\n",
     "err_list2 = extract_error(log_list2)\n",
-    "plt.plot(err_list)\n",
-    "plt.plot(err_list2)\n",
+    "plt.semilogy(err_list)\n",
+    "plt.semilogy(err_list2)\n",
     "# set legend\n",
     "plt.legend([\"gpc\", \"svd\"])\n",
     "plt.xlabel(\"Iteration\")\n",
-    "plt.ylabel(\"Error\")\n",
+    "plt.ylabel(\"L2 norm of weight error (largest singular value)\")\n",
     "plt.title(\"Error vs Iteration\")\n",
     "plt.show()"
    ]
@@ -642,7 +664,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "rpu_config = RPUConfigwithProgram(program_weights=program_weights_gpc)\n",
+    "rpu_config = RPUConfigwithProgram(program_weights=program_weights_gdp)\n",
     "ctile = RealisticTile(output_size, input_size, rpu_config=rpu_config)\n",
     "\n",
     "rpu_config2 = RPUConfigwithProgram(program_weights=program_weights_svd)\n",
