feat: Add generalized k-batched version of gdp method

--- a/src/prog-scheme/prog-scheme.ipynb
+++ b/src/prog-scheme/prog-scheme.ipynb
@@ -379,6 +379,73 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "log = RankedLogger()\n",
+    "\n",
+    "\n",
+    "@torch.no_grad()\n",
+    "def program_weights_gdp2(\n",
+    "    self,\n",
+    "    from_reference: bool = True,\n",
+    "    batch_size: int = 5,\n",
+    "    learning_rate: float = 1,\n",
+    "    max_iter: int = 100,\n",
+    "    tolerance: Optional[float] = 0.01,\n",
+    "    w_init: Union[float, Tensor] = 0.01,\n",
+    ") -> None:\n",
+    "    \"\"\"Programm the target weights into the conductances using the\n",
+    "    pulse update defined.\n",
+    "\n",
+    "    Variable batch version of the `program_weights_gdp` method.\n",
+    "    \"\"\"\n",
+    "    if not from_reference or self.reference_combined_weights is None:\n",
+    "        self.reference_combined_weights = self.tile.get_weights()\n",
+    "        target_weights = self.reference_combined_weights\n",
+    "\n",
+    "    input_size = self.tile.get_x_size()\n",
+    "    x_values = torch.eye(input_size)\n",
+    "    x_values = x_values.to(self.device)\n",
+    "    target_values = x_values @ target_weights.to(self.device).T\n",
+    "\n",
+    "    target_max = target_values.abs().max().item()\n",
+    "    if isinstance(w_init, Tensor):\n",
+    "        self.tile.set_weights(w_init)\n",
+    "    else:\n",
+    "        self.tile.set_weights_uniform_random(-w_init, w_init)  # type: ignore\n",
+    "\n",
+    "    lr_save = self.tile.get_learning_rate()  # type: ignore\n",
+    "    self.tile.set_learning_rate(learning_rate)  # type: ignore\n",
+    "\n",
+    "    for i in range(max_iter):\n",
+    "        x = x_values[i * batch_size : (i + 1) * batch_size]\n",
+    "        y = self.tile.forward(x, False)\n",
+    "        # TODO: error와 weight 2norm 사이 관계 분석\n",
+    "        error = y - target_values[i * batch_size : (i + 1) * batch_size]\n",
+    "\n",
+    "        # Check if the index exceeds the input size\n",
+    "        if (i + 1) * batch_size > input_size:\n",
+    "            x_overlap = x_values[: (i + 1) * batch_size % input_size]\n",
+    "            y_overlap = self.tile.forward(x_overlap, False)\n",
+    "            error_overlap = y_overlap - target_values[: (i + 1) * batch_size % input_size]\n",
+    "            error[: len(error_overlap)] += error_overlap\n",
+    "\n",
+    "        err_normalized = error.abs().mean().item() / target_max\n",
+    "        mtx_diff = self.tile.get_weights() - target_weights\n",
+    "        l2_norm = torch.linalg.matrix_norm(mtx_diff, ord=2)\n",
+    "        log.debug(f\"Error: {l2_norm}\")\n",
+    "        # log.debug(f\"Error: {err_normalized}\")\n",
+    "        if tolerance is not None and err_normalized < tolerance:\n",
+    "            break\n",
+    "        self.tile.update(x, error, False)  # type: ignore\n",
+    "\n",
+    "    self.tile.set_learning_rate(lr_save)  # type: ignore"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -536,9 +603,9 @@
     "output_size = 500\n",
     "\n",
     "# generate low rank matrix\n",
-    "k = 10\n",
+    "rank = 100\n",
     "u, s, v = torch.svd(torch.randn(input_size, output_size))\n",
-    "w = torch.mm(u[:, :k], torch.mm(torch.diag(s[:k]), v[:, :k].t()))"
+    "w = torch.mm(u[:, :rank], torch.mm(torch.diag(s[:rank]), v[:, :rank].t()))"
    ]
   },
   {
@@ -565,8 +632,8 @@
     "from aihwkit.simulator.tiles.analog import AnalogTile\n",
     "\n",
     "pre_post_cfg = PrePostProcessingParameter(input_range=InputRangeParameter(enable=True))\n",
-    "# device_cfg = ConstantStepDevice(diffusion=0)\n",
-    "device_cfg = IdealDevice()\n",
+    "device_cfg = ConstantStepDevice(diffusion=0)\n",
+    "# device_cfg = IdealDevice()\n",
     "update_cfg = UpdateParameters(pulse_type=PulseType.STOCHASTIC_COMPRESSED)\n",
     "rpuconfig = SingleRPUConfig(update=update_cfg, device=device_cfg, pre_post=pre_post_cfg)\n",
     "# rpuconfig = SingleRPUConfig()\n",
@@ -586,7 +653,7 @@
    "source": [
     "from aihwkit.simulator.tiles.periphery import TileWithPeriphery\n",
     "\n",
-    "atile.program_weights = program_weights_gdp.__get__(atile, TileWithPeriphery)\n",
+    "atile.program_weights = program_weights_gdp2.__get__(atile, TileWithPeriphery)\n",
     "atile2.program_weights = program_weights_svd.__get__(atile2, TileWithPeriphery)"
    ]
   },
@@ -625,10 +692,10 @@
     "plt.semilogy(err_list)\n",
     "plt.semilogy(err_list2)\n",
     "# set legend\n",
-    "plt.legend([\"gpc\", \"svd\"])\n",
+    "plt.legend([\"gdp-sequential(batchsize 5)\", \"svd\"])\n",
     "plt.xlabel(\"Iteration\")\n",
     "plt.ylabel(\"L2 norm of weight error (largest singular value)\")\n",
-    "plt.title(\"Error vs Iteration\")\n",
+    "plt.title(\"Error vs Iteration @ {}x{}, rank={}\".format(input_size, output_size, rank))\n",
     "plt.show()"
    ]
   },
